--- a/layouts/partials/vendor.html
+++ b/layouts/partials/vendor.html
@@ -57,14 +57,10 @@
 {{/* TikZJax */}}
 {{ if .Page.HasShortcode "tikz" }}
   <!-- https://github.com/benrbray/tikzjax -->
-  <!-- {{ $tikzFonts := resources.Get "lib/tikzjax/fonts.css" }} -->
-  {{ $tikzFonts := resources.Get "lib/tikzjax/styles-obs.css" }}
+  {{ $tikzFonts := resources.Get "lib/tikzjax/fonts.css" }}
   {{ $tikzFonts := $tikzFonts | resources.Fingerprint "sha512" }}
   <link rel="stylesheet" type="text/css" href="{{ $tikzFonts.RelPermalink }}" integrity="{{ $tikzFonts.Data.Integrity }}">
-  {{ $tikzJS := resources.Get "lib/tikzjax/tikzjax-obs.js" }}
+  {{ $tikzJS := resources.Get "lib/tikzjax/tikzjax.js" }}
   {{ $tikzJS := $tikzJS | resources.Fingerprint "sha512" }}
   <script defer src="{{ $tikzJS.RelPermalink }}" integrity="{{ $tikzJS.Data.Integrity }}"></script>
-  {{ $tikzPost := resources.Get "lib/tikzjax/postproc-tikz-svg.js" }}
-  {{ $tikzPost := $tikzPost | resources.Fingerprint "sha512" }}
-  <script defer src="{{ $tikzPost.RelPermalink }}" integrity="{{ $tikzPost.Data.Integrity }}" type="module"></script>
 {{ end }}
