refactored and removed useless customisation

--- a/layouts/shortcodes/badge.html
+++ b/layouts/shortcodes/badge.html
@@ -1,4 +1,4 @@
 <a
-  class="ms-1 rounded-md border border-primary-400 px-1 py-[1px] text-xs font-normal text-primary-700 dark:border-primary-600 dark:text-primary-400 !no-underline"
+  class="ms-1 rounded-md border border-primary-400 px-1 py-[1px] text-xs font-normal text-primary-700 dark:border-primary-600 dark:text-primary-400"
   {{ with .Get "href" }}href="{{ . }}"  target="_blank" rel="noopener"{{ end }}
 >{{ .Inner }}</a>
