author credit and footnote preview

--- a/layouts/partials/vendor.html
+++ b/layouts/partials/vendor.html
@@ -1,3 +1,4 @@
+{{ partial "lib/footnote.html" . }}
 {{ partial "lib/mermaid.html" . }}
 {{ partial "lib/chart.html" . }}
 {{ partial "lib/katex.html" . }}
