--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -26,6 +26,7 @@
   </section>
   {{ if .Data.Pages }}
     {{ $pages := (cond ($.Params.flattenStructure | default false) .RegularPagesRecursive .Pages) }}
+    {{ $pages := (cond ($.Params.reverseChronological | default true ) $pages $pages.ByDate.Reverse) }}
     <section>
       {{ if $.Params.groupByYear | default ($.Site.Params.list.groupByYear | default true) }}
         {{ range (.Paginate ($pages.GroupByDate "2006")).PageGroups }}
